--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,20 @@
 {
+  "header": {
+    "home": "Home",
+    "about": "About Us",
+    "gallery": "Gallery",
+    "contacts": "Contacts",
+    "faq": "FAQ"
+  },
+  "footer": {
+    "about_company": "ABOUT COMPANY",
+    "gallery": "GALLERY",
+    "about": "ABOUT COMPANY",
+    "faq": "FAQ",
+    "contacts": "CONTACTS",
+    "address": "Kharkiv, Nauky Ave. 22-A",
+    "phone": "+38 (050) 604 23 22"
+  },
   "main": {
     "hero": {
       "title": "Construction is the art of creating the future with materials.",
@@ -52,6 +68,100 @@
         },
         "logistics": {
           "title": "Fast logistics"
+        }
+      }
+    }
+  },
+  "about": {
+    "title": "About Us",
+    "main": {
+      "paragraph1": "TD Stolytsya Market is a team of professionals specializing in the construction of residential and non-residential buildings, infrastructure reconstruction, and the construction of shelters and underground complexes. Since 2016, we have successfully implemented projects of any complexity, using modern technologies, quality materials, and innovative approaches. Our experience allows us to ensure high quality and reliability of each facility, from small structures to large-scale infrastructure solutions.",
+      "paragraph2": "One of our key areas is the production of metal structures and concrete solutions that ensure safety and durability. We work responsibly and adhere to international standards, which is confirmed by our certified management system: (ISO 9001(2015), ISO 45001(2019), 14001(2015).",
+      "paragraph3": "Our team consists of more than 100 qualified employees who make daily efforts to implement the most complex tasks. We have all the necessary licenses to conduct business, including EL01:8020-2630-9976-1706, which guarantees our clients transparency and compliance with all regulatory requirements.",
+      "paragraph4": "The company's annual turnover is 1 billion hryvnias, which indicates our stability and customer trust. We are proud that each of our projects is a combination of modern technologies, quality materials, and a responsible approach. Our goal is to create spaces that provide comfort, safety, and durability for everyone."
+    },
+    "philosophy": {
+      "title": "Company Philosophy",
+      "paragraph1": "We believe that construction is not just about creating objects, but about forming spaces that affect people's quality of life. Each of our projects is a combination of innovation, reliability, and responsibility. We strive not only to meet the needs of clients but also to exceed expectations by creating solutions that withstand time and challenges.",
+      "paragraph2": "Our mission is to build a future where each facility becomes a testament to quality, safety, and durability. We understand that our work affects people's lives, so we approach each project with maximum dedication and attention to detail.",
+      "paragraph3": "For us, not only technical parameters are important, but also client trust, environmental responsibility, and social significance. We don't just build buildings — we create conditions for development, protection, and comfort.",
+      "paragraph4": "Our philosophy is a combination of professional experience, modern technologies, and the belief that every project matters. We don't just build facilities — we build trust."
+    },
+    "strategy": {
+      "title": "Strategy",
+      "intro": "Our strategy is aimed at achieving leadership in the field of construction, production, and infrastructure reconstruction through innovation, quality, and a responsible approach. We strive to become a reliable partner for our clients, offering comprehensive solutions that ensure safety, durability, and efficiency.",
+      "goalsTitle": "Main Objectives:",
+      "goals": {
+        "goal1": {
+          "title": "Expanding the Range of Services",
+          "items": [
+            "Implementation of new directions, such as smart construction and environmentally oriented projects.",
+            "Development of production of innovative fortification materials."
+          ]
+        },
+        "goal2": {
+          "title": "Improving Quality and Efficiency",
+          "items": [
+            "Implementation of modern technologies (BIM modeling, process automation).",
+            "Continuous training and professional development of employees."
+          ]
+        },
+        "goal3": {
+          "title": "Strengthening Market Position",
+          "items": [
+            "Active participation in public and private tenders.",
+            "Expanding the geography of activities and entering new markets."
+          ]
+        },
+        "goal4": {
+          "title": "Developing Partnerships",
+          "items": [
+            "Creating strategic alliances with reliable suppliers and contractors.",
+            "Expanding the partner network to optimize logistics and reduce costs."
+          ]
+        },
+        "goal5": {
+          "title": "Social and Environmental Responsibility",
+          "items": [
+            "Implementation of environmentally friendly technologies in construction.",
+            "Support for social initiatives aimed at restoring infrastructure and helping those affected by the war."
+          ]
+        }
+      },
+      "valuesTitle": "Our Strategy Values:",
+      "values": {
+        "value1": {
+          "title": "Reliability",
+          "description": "We keep our promises and guarantee quality."
+        },
+        "value2": {
+          "title": "Innovation",
+          "description": "We continuously improve processes and technologies."
+        },
+        "value3": {
+          "title": "Responsibility",
+          "description": "We work with consideration for the interests of clients, society, and the environment."
+        }
+      }
+    },
+    "stats": {
+      "title": "Key Indicators",
+      "items": {
+        "founded": {
+          "number": "2016",
+          "description": "Year of establishment"
+        },
+        "employees": {
+          "number": "100+",
+          "description": "Qualified employees"
+        },
+        "revenue": {
+          "number": "1 bln",
+          "description": "Hryvnias annual turnover"
+        },
+        "certifications": {
+          "number": "3",
+          "description": "ISO certifications"
         }
       }
     }
