--- a/locales/uk/translation.json
+++ b/locales/uk/translation.json
@@ -1,4 +1,20 @@
 {
+  "header": {
+    "home": "Головна",
+    "about": "Про нас",
+    "gallery": "Галерея",
+    "contacts": "Контакти",
+    "faq": "Питання-відповіді"
+  },
+  "footer": {
+    "about_company": "ПРО КОМПАНІЮ",
+    "gallery": "ГАЛЕРЕЯ",
+    "about": "ПРО КОМПАНІЮ",
+    "faq": "ПИТАННЯ ВІДПОВІДІ",
+    "contacts": "КОНТАКТИ",
+    "address": "м. Харків, пр. Науки (Леніна) 22-А",
+    "phone": "+38 (050) 604 23 22"
+  },
   "main": {
     "hero": {
       "title": "Будівництво - це мистецтво створювати за допомогою матеріалів майбутнє.",
@@ -52,6 +68,100 @@
         },
         "logistics": {
           "title": "Швидка логістика"
+        }
+      }
+    }
+  },
+  "about": {
+    "title": "Про нас",
+    "main": {
+      "paragraph1": "«ТД Столиця Маркет» — команда професіоналів, яка спеціалізується на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. З 2016 року ми успішно реалізуємо проекти будь-якої складності, використовуючи сучасні технології, якісні матеріали та інноваційні підходи. Наш досвід дозволяє нам забезпечувати високу якість та надійність кожного об'єкта, від невеликих споруд до масштабних інфраструктурних рішень.",
+      "paragraph2": "Одним із наших ключових напрямків є виробництво металоконструкцій та бетонних рішень, які забезпечують безпеку та довговічність. Ми працюємо з відповідальністю та дотримуємося міжнародних стандартів, що підтверджується нашою сертифікованою системою управління: (ISO 9001(2015), ISO 45001(2019), 14001(2015).",
+      "paragraph3": "Наша команда налічує понад 100 кваліфікованих співробітників, які щодня докладають зусиль для реалізації найскладніших завдань. Ми маємо всі необхідні ліцензії для ведення діяльності, зокрема та EL01:8020-2630-9976-1706, що гарантує нашим клієнтам прозорість та дотримання всіх нормативних вимог.",
+      "paragraph4": "Щорічний оборот компанії становить 1 мільярд гривень, що свідчить про нашу стабільність та довіру клієнтів. Ми пишаємося тим, що кожен наш проект — це поєднання сучасних технологій, якісних матеріалів та відповідального підходу. Наша мета — створювати простори, які забезпечують комфорт, безпеку та довговічність для кожного."
+    },
+    "philosophy": {
+      "title": "Філософія компанії",
+      "paragraph1": "Ми віримо, що будівництво — це не просто створення об'єктів, а формування просторів, які впливають на якість життя людей. Кожен наш проект — це поєднання інновацій, надійності та відповідальності. Ми прагнемо не лише задовольняти потреби клієнтів, але й виходити за межі очікувань, створюючи рішення, які витримують час і виклики.",
+      "paragraph2": "Наша місія — будувати майбутнє, де кожен об'єкт стає свідченням якості, безпеки та довговічності. Ми розуміємо, що наша робота впливає на життя людей, тому підходимо до кожного проекту з максимальною віддачею та увагою до деталей.",
+      "paragraph3": "Для нас важливі не лише технічні параметри, але й довіра клієнтів, екологічна відповідальність та соціальна значущість. Ми будуємо не просто будівлі — ми створюємо умови для розвитку, захисту та комфорту.",
+      "paragraph4": "Наша філософія — це поєднання професійного досвіду, сучасних технологій та віри в те, що кожен проект має значення. Ми будуємо не просто об'єкти — ми будуємо довіру."
+    },
+    "strategy": {
+      "title": "Стратегія",
+      "intro": "Наша стратегія спрямована на досягнення лідерства у сфері будівництва, виробництва та реконструкції інфраструктури через інновації, якість та відповідальний підхід. Ми прагнемо стати надійним партнером для наших клієнтів, пропонуючи комплексні рішення, які забезпечують безпеку, довговічність та ефективність.",
+      "goalsTitle": "Основні цілі:",
+      "goals": {
+        "goal1": {
+          "title": "Розширення спектру послуг",
+          "items": [
+            "Впровадження нових напрямків, таких як \"розумне будівництво\" (smart construction) та екологічно орієнтовані проекти.",
+            "Розвиток виробництва інноваційних фортифікаційних матеріалів."
+          ]
+        },
+        "goal2": {
+          "title": "Підвищення якості та ефективності",
+          "items": [
+            "Впровадження сучасних технологій (BIM-моделювання, автоматизація процесів).",
+            "Постійне навчання та підвищення кваліфікації співробітників."
+          ]
+        },
+        "goal3": {
+          "title": "Зміцнення позицій на ринку",
+          "items": [
+            "Активна участь у державних та приватним тендерах.",
+            "Розширення географії діяльності та вихід на нові ринки."
+          ]
+        },
+        "goal4": {
+          "title": "Розвиток партнерських відносин",
+          "items": [
+            "Створення стратегічних альянсів з надійними постачальниками та підрядниками.",
+            "Розширення мережі партнерів для оптимізації логістики та зниження витрат."
+          ]
+        },
+        "goal5": {
+          "title": "Соціальна та екологічна відповідальність",
+          "items": [
+            "Впровадження екологічно чистих технологій у будівництві.",
+            "Підтримка соціальних ініціатив, спрямованих на відновлення інфраструктури та допомогу постраждалим від війни."
+          ]
+        }
+      },
+      "valuesTitle": "Наші цінності у стратегії:",
+      "values": {
+        "value1": {
+          "title": "Надійність",
+          "description": "Ми виконуємо обіцянки та гарантуємо якість."
+        },
+        "value2": {
+          "title": "Інновації",
+          "description": "Постійно вдосконалюємо процеси та технології."
+        },
+        "value3": {
+          "title": "Відповідальність",
+          "description": "Працюємо з урахуванням інтересів клієнтів, суспільства та навколишнього середовища."
+        }
+      }
+    },
+    "stats": {
+      "title": "Ключові показники",
+      "items": {
+        "founded": {
+          "number": "2016",
+          "description": "Рік заснування"
+        },
+        "employees": {
+          "number": "100+",
+          "description": "Кваліфікованих співробітників"
+        },
+        "revenue": {
+          "number": "1 млрд",
+          "description": "Гривень річний оборот"
+        },
+        "certifications": {
+          "number": "3",
+          "description": "ISO сертифікати"
         }
       }
     }
