Add history section to about page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -80,6 +80,12 @@
       "paragraph3": "Our team consists of more than 100 qualified employees who make daily efforts to implement the most complex tasks. We have all the necessary licenses to conduct business, including EL01:8020-2630-9976-1706, which guarantees our clients transparency and compliance with all regulatory requirements.",
       "paragraph4": "The company's annual turnover is 1 billion hryvnias, which indicates our stability and customer trust. We are proud that each of our projects is a combination of modern technologies, quality materials, and a responsible approach. Our goal is to create spaces that provide comfort, safety, and durability for everyone."
     },
+    "history": {
+      "title": "Company History",
+      "paragraph1": "TD Stolytsya Market was founded in 2016 by a group of construction engineers who aimed to create high-quality and reliable structures using modern technologies. Initially, we implemented small commercial and residential projects, but thanks to clear planning and a responsible approach, we quickly expanded the scope of our activities.",
+      "paragraph2": "By 2019, the company had already established itself as a reliable contractor for complex construction work, received ISO 9001(2015), ISO 45001(2019), 14001(2015) certificates, and launched its own production of metal structures and concrete solutions. Further development was accompanied by participation in government tenders, infrastructure reconstruction, and the construction of defense facilities after the start of the full-scale war.",
+      "paragraph3": "Today, TD Stolytsya Market is a team of over 100 specialists implementing projects of any complexity. Our experience, modern technologies, and adherence to international standards allow us to guarantee the quality and durability of each object. We continue to develop while maintaining our key values — reliability, innovation, and responsibility to clients and society."
+    },
     "philosophy": {
       "title": "Company Philosophy",
       "paragraph1": "We believe that construction is not just about creating objects, but about forming spaces that affect people's quality of life. Each of our projects is a combination of innovation, reliability, and responsibility. We strive not only to meet the needs of clients but also to exceed expectations by creating solutions that withstand time and challenges.",
