--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -80,6 +80,12 @@
       "paragraph3": "Наша команда налічує понад 100 кваліфікованих співробітників, які щодня докладають зусиль для реалізації найскладніших завдань. Ми маємо всі необхідні ліцензії для ведення діяльності, зокрема та EL01:8020-2630-9976-1706, що гарантує нашим клієнтам прозорість та дотримання всіх нормативних вимог.",
       "paragraph4": "Щорічний оборот компанії становить 1 мільярд гривень, що свідчить про нашу стабільність та довіру клієнтів. Ми пишаємося тим, що кожен наш проект — це поєднання сучасних технологій, якісних матеріалів та відповідального підходу. Наша мета — створювати простори, які забезпечують комфорт, безпеку та довговічність для кожного."
     },
+    "history": {
+      "title": "Історія компанії",
+      "paragraph1": "Компанія «ТД Столиця Маркет» заснована у 2016 році групою інженерів-будівельників, які ставили за мету створювати якісні та надійні об'єкти з урахуванням сучасних технологій. Спочатку ми реалізовували невеликі комерційні та житлові проєкти, але завдяки чіткому плануванню та відповідальному підходу швидко розширили масштаби діяльності.",
+      "paragraph2": "До 2019 року компанія вже зарекомендувала себе як надійного виконавця складних будівельних робіт, отримала сертифікати ISO 9001(2015), ISO 45001(2019), 14001(2015) та запустила власне виробництво металоконструкцій і бетонних рішень. Подальший розвиток супроводжувався участю у державних тендерах, реконструкцією інфраструктури та будівництвом оборонних споруд після початку повномасштабної війни.",
+      "paragraph3": "Сьогодні «ТД Столиця Маркет» — це команда з понад 100 фахівців, яка реалізує проєкти будь-якої складності. Наш досвід, сучасні технології та дотримання міжнародних стандартів дозволяють гарантувати якість і довговічність кожного об'єкта. Ми продовжуємо розвиватися, зберігаючи наші ключові цінності — надійність, інновації та відповідальність перед клієнтами і суспільством."
+    },
     "philosophy": {
       "title": "Філософія компанії",
       "paragraph1": "Ми віримо, що будівництво — це не просто створення об'єктів, а формування просторів, які впливають на якість життя людей. Кожен наш проект — це поєднання інновацій, надійності та відповідальності. Ми прагнемо не лише задовольняти потреби клієнтів, але й виходити за межі очікувань, створюючи рішення, які витримують час і виклики.",
