--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -18,7 +18,7 @@
   "main": {
     "hero": {
       "title": "Будівництво - це мистецтво створювати за допомогою матеріалів майбутнє.",
-      "description": "Ми компанія ТД Столиця Маркет - спеціалізуємося на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. Використовуємо металоконструкції та бетонні рішення для забезпечення безпеки та довговічності. Наші проекти — це поєднання сучасних технологій, якісних матеріалів та відповідального підходу.",
+      "description": "Ми компанія ТД Столиця Маркет - спеціалізуємося на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. Наші проекти — це поєднання сучасних технологій, якісних матеріалів та відповідального підходу.",
       "learnMore": "ДІЗНАТИСЬ ДЕТАЛЬНІШЕ"
     },
     "activityDirections": {
@@ -70,6 +70,11 @@
           "title": "Швидка логістика"
         }
       }
+    },
+    "stats": {
+      "yearsOnMarket": "років на комерційному ринку",
+      "qualifiedEmployees": "кваліфікованих співробітників",
+      "isoCertificates": "ISO сертифікати"
     }
   },
   "about": {
