--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -317,5 +317,24 @@
         "answer": "Так. Один із наших пріоритетів — відновлення інфраструктури. Ми маємо досвід реконструкції житлових будинків, адміністративних та соціальних об'єктів, включаючи укріплення фундаментів і несучих конструкцій."
       }
     ]
+  },
+  "contact": {
+    "title": "КОНТАКТИ",
+    "phones": "телефони",
+    "officeAddress": "адреса офісів",
+    "zaporizhzhiaRegion": "Запорізька обл.",
+    "zaporizhzhiaCity": "м. Запоріжжя",
+    "independenceStreet": "вул. Незалежної України",
+    "building": "буд.",
+    "office": "прим.",
+    "email": "електронна пошта",
+    "workingHours": "години роботи",
+    "mondayToFriday": "Пн-Пт",
+    "saturdaySunday": "Сб-Нд",
+    "weekend": "Вихідний",
+    "workingManAlt": "будівельник",
+    "ourPartners": "НАШІ ПАРТНЕРИ",
+    "partnerLogo": "Логотип партнера",
+    "visitPartnerSite": "Відвідати сайт партнера"
   }
 }
