Fix styles at main and about page

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -85,6 +85,38 @@
       "paragraph3": "Наша команда налічує понад 100 кваліфікованих співробітників, які щодня докладають зусиль для реалізації найскладніших завдань. Ми маємо всі необхідні ліцензії для ведення діяльності, зокрема та EL01:8020-2630-9976-1706, що гарантує нашим клієнтам прозорість та дотримання всіх нормативних вимог.",
       "paragraph4": "Щорічний оборот компанії становить 1 мільярд гривень, що свідчить про нашу стабільність та довіру клієнтів. Ми пишаємося тим, що кожен наш проект — це поєднання сучасних технологій, якісних матеріалів та відповідального підходу. Наша мета — створювати простори, які забезпечують комфорт, безпеку та довговічність для кожного."
     },
+    "mainQuote": "Ми будуємо не просто споруди — ми створюємо надійне майбутнє",
+    "stats": {
+      "years": "Років досвіду",
+      "specialists": "Фахівців",
+      "revenue": "млрд. грн. оборот",
+      "certificates": "Сертифікати якості"
+    },
+    "featuredProject": {
+      "title": "Наш знаковий проект",
+      "description": "Комплекс захисних споруд та укриттів, реалізований у 2023 році на замовлення оборонного сектору. Проект включав будівництво підземних приміщень з використанням інноваційних матеріалів, що забезпечують максимальний рівень захисту та комфорту одночасно."
+    },
+    "process": {
+      "title": "Як ми працюємо",
+      "steps": {
+        "step1": {
+          "title": "Аналіз та планування",
+          "description": "Детальне вивчення потреб клієнта, розробка концепції та складання кошторису робіт."
+        },
+        "step2": {
+          "title": "Проектування",
+          "description": "Створення технічної документації, 3D-моделювання об'єктів та узгодження всіх деталей."
+        },
+        "step3": {
+          "title": "Виробництво та будівництво",
+          "description": "Виготовлення металоконструкцій, підготовка матеріалів та будівництво об'єкта під контролем інженерів."
+        },
+        "step4": {
+          "title": "Контроль якості та здача",
+          "description": "Суворий контроль кожного етапу робіт та здача об'єкта з повною документацією та гарантією."
+        }
+      }
+    },
     "history": {
       "title": "Історія компанії",
       "paragraph1": "Компанія «ТД Столиця Маркет» заснована у 2016 році групою інженерів-будівельників, які ставили за мету створювати якісні та надійні об'єкти з урахуванням сучасних технологій. Спочатку ми реалізовували невеликі комерційні та житлові проєкти, але завдяки чіткому плануванню та відповідальному підходу швидко розширили масштаби діяльності.",
@@ -97,6 +129,12 @@
       "paragraph2": "Наша місія — будувати майбутнє, де кожен об'єкт стає свідченням якості, безпеки та довговічності. Ми розуміємо, що наша робота впливає на життя людей, тому підходимо до кожного проекту з максимальною віддачею та увагою до деталей.",
       "paragraph3": "Для нас важливі не лише технічні параметри, але й довіра клієнтів, екологічна відповідальність та соціальна значущість. Ми будуємо не просто будівлі — ми створюємо умови для розвитку, захисту та комфорту.",
       "paragraph4": "Наша філософія — це поєднання професійного досвіду, сучасних технологій та віри в те, що кожен проект має значення. Ми будуємо не просто об'єкти — ми будуємо довіру."
+    },
+    "team": {
+      "title": "Наша команда",
+      "quote": "Наш успіх ґрунтується на професіоналізмі, відданості та інноваційному мисленні кожного члена команди.",
+      "paragraph1": "Наша команда налічує понад 100 кваліфікованих співробітників, які щодня докладають зусиль для реалізації найскладніших завдань. Це професіонали в різних галузях: інженери, архітектори, технологи, управлінці, фахівці з безпеки та логістики.",
+      "paragraph2": "Ми постійно підвищуємо кваліфікацію наших фахівців, впроваджуємо нові підходи до роботи та забезпечуємо комфортні умови для розвитку кожного члена команди. Наші співробітники мають доступ до сучасних технологій та можливість реалізувати свій потенціал у значущих проектах."
     },
     "strategy": {
       "title": "Стратегія",
@@ -155,26 +193,10 @@
         }
       }
     },
-    "stats": {
-      "title": "Ключові показники",
-      "items": {
-        "founded": {
-          "number": "2016",
-          "description": "Рік заснування"
-        },
-        "employees": {
-          "number": "100+",
-          "description": "Кваліфікованих співробітників"
-        },
-        "revenue": {
-          "number": "1 млрд",
-          "description": "Гривень річний оборот"
-        },
-        "certifications": {
-          "number": "3",
-          "description": "ISO сертифікати"
-        }
-      }
+    "cta": {
+      "title": "Готові втілити ваш проект?",
+      "text": "Довірте нам реалізацію ваших будівельних задумів. Наша команда забезпечить якісне виконання робіт з дотриманням усіх стандартів та термінів.",
+      "button": "Зв'язатися з нами"
     }
   },
   "faq": {
@@ -336,5 +358,11 @@
     "ourPartners": "НАШІ ПАРТНЕРИ",
     "partnerLogo": "Логотип партнера",
     "visitPartnerSite": "Відвідати сайт партнера"
+  },
+  "latestProjects": {
+    "title": "Наші останні проекти",
+    "subtitle": "Ознайомтеся з нашими найсвіжішими роботами у сфері будівництва та реконструкції",
+    "viewDetails": "Детальніше",
+    "viewAll": "Переглянути всі проекти"
   }
 }
